<resources>
    <string name="app_name">My VSPC</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_instagram">Instagram</string>
    <string name="menu_youtube">YouTube</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_site_home">Home page</string>
    <string name="nav_site_enrollee">Enrollee</string>
    <string name="nav_site_student">Student</string>
    <string name="nav_site_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="nav_web_title">Site</string>

    <string name="news_type_name_news">news</string>
    <string name="news_type_name_notification">notification</string>
    <string name="news_type_name_warning">warning</string>
    <string name="home_menu_action_title_exit">Exit</string>
    <string name="schedule_menu_action_title_update">Update</string>

    <string name="nav_in_dev">In developing</string>
    <string name="nav_open_site_error_toast">The site cannot be opened.</string>
    <string name="hello_discover_fragment" translatable="false">Discover screen</string>
    <string name="menu_vk">VK</string>
    <string name="menu_other">Other</string>
    <string name="discover_info_today">Today</string>
    <string name="nav_social_title">Social</string>
    <string name="menu_discover">Discover</string>
    <string name="menu_news">News</string>
    <string name="menu_schedule">Schedule</string>

    <string name="important_notification_channel_id" translatable="false">myvspc_important_channel</string>
    <string name="important_notification_channel_name" translatable="false">Объявления</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>